    Changed the '-t' option to '-s'
    Added --execute and --timer to the commandline argument system
    Made timer and execute be '-t', and '-x' respectively
    Did some README updates
    Added to the testing script significantly, and got travis to run that AND nosetests
    Properly encapsulated the 'cytherize' and 'core' functions
    Added the -X and -T options, meant for super powerful debugging and building
    Gave the option to print the commands passed off only if wanted to
    Formatted the '-h' text to be even more helpful!
    Deleted the current useless documentation, adding new docs soon
    Did some serious encapsulation and reorganization of entire compilation system
    Fixed the error management system to make sure it is reliable
    All communications from cyther to the user are located in a single place, and done through stdout

0.6.2
    Fixed an encoding bug
    Deleted the test_cyther null command in the travis yaml
    Took README.md out of the .gitignore
    Fixed the distribution settings
    Implemented some PEP8 rules
    Added the __all__ attribute to cyther.py
    Reordered all functions to make more sense
    Properly encapsulated the 'script' code
    Finally added proper documentation!

0.7.0
    Dealt with pypi nonsense
    Took out auto deployment

0.7.1
    Updated the README to include the current cytherize -h text
    Added linereader to the packages included

0.8.0
    Added additional help texts to aid in testing
    Cut out unnecssary junk in the help text (gcc configurations)
    Fixed some PEP8 issues
    Split cyther.py into multiple modules to make everything easier to understand
    Updated setup.cfg to include the correct README
    Implemented entry_points on setup tools to make an executable script
    TODO
    Implemented a 'makefile' system. This is not the primary method of compilation.
        Instead of directly calling commands, it will make a 'makefile', for later modification if desired