@@ -3,9 +3,12 @@
 import time
 import re
 
-from .tools import multiCall, printCommands
-from .validation import *
-from .processing import *
+from .tools import POUND_EXTRACT, TRIPPLE_EXTRACT, multiCall, printCommands
+from .validation import isValid, isOutDated
+from .processing import furtherArgsProcessing, processFiles, makeCommands
+from .definitions import WAIT_FOR_FIX, SKIPPED_COMPILATION, INTERVAL, ERROR_PASSOFF,\
+                         FINE, WATCH_STATS_TEMPLATE, SETUP_TEMPLATE, TIMER_TEMPLATE
+from .system import *
 
 
 def cueExtractAndRun(args, file):
