@@ -81,6 +81,8 @@
     Split cyther.py into multiple modules to make everything easier to understand
     Updated setup.cfg to include the correct README
     Implemented entry_points on setup tools to make an executable script
-    TODO
+    Temporarily disables the -p presets system
+    Cyther now works in three stages temporarily: cython, compile, link
+    TODO (not yet done)
     Implemented a 'makefile' system. This is not the primary method of compilation.
         Instead of directly calling commands, it will make a 'makefile', for later modification if desired
